server setup and .env vars

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/rfnkurle/MySQL-Movie-Booking#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "inquirer": "^8.2.4",
     "mysql2": "^3.2.3"
   }
